# cm3500-b-ce-exporter

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/systemd/: README.md  cm3500-apply-capacity  cm3500-capacity.path  cm3500-capacity.service  cm3500-failover-handler  cm3500-failover.path  cm3500-failover.service
grafana/: dashboard.json  dashboard_otlp.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: alert_rules_common.yml  alert_rules_docsis_us.yml  alert_rules_eurodocsis.yml  alert_rules_otlp.yml  prometheus.yml
src/: automation.rs  client.rs  lib.rs  main.rs  metrics.rs  otlp.rs  parser.rs
tests/: integration.rs
tests/fixtures/: cm_state_cgi.html  config_params_cgi.html  dhcp_cgi.html  event_cgi.html  otlp_logs_snapshot.txt  otlp_metrics_snapshot.txt  qos_cgi.html  status_cgi.html  vers_cgi.html
