[package]
name = "cm3500-b-ce-exporter"
version = "0.1.3"
edition = "2021"
description = "Prometheus exporter for ARRIS CM3500B CE cable modem"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "rustls-tls", "json"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
